--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -1615,9 +1615,14 @@ tr:last-child > td {
   border-bottom: none;
 }
 
-.table thead th {
+.table.table-custom thead th {
   vertical-align: bottom;
-  background: #f9f9f9;
+  background: #f8faff;
+  color: #1b1f26;
+}
+
+.table.table-custom td {
+  color: #1b1f26;
 }
 
 .table tbody + tbody {
@@ -1956,18 +1961,18 @@ tr:last-child > td {
 }
 
 .form-control {
+  height: 54px;
   display: block;
   width: 100%;
-  height: calc(1.5em + 0.75rem + 2px);
-  padding: 0.375rem 0.75rem;
+  padding: 16px 24px;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #6e707e;
+  color: #98a2b3;
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #d1d3e2;
-  border-radius: 0.35rem;
+  border-radius: 8px;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
@@ -1988,11 +1993,14 @@ tr:last-child > td {
 }
 
 .form-control:focus {
-  color: #6e707e;
+  color: #1b1f26;
   background-color: #fff;
-  border-color: #bac8f3;
+  border: 2px solid #264179;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(78, 115, 223, 0.25);
+}
+
+.form-control:focus::placeholder {
+  color: #1b1f26;
 }
 
 .form-control::-webkit-input-placeholder {
@@ -2197,7 +2205,7 @@ textarea.form-control {
 .form-row > [class*='col-'] > .valid-tooltip {
   left: 5px;
 }
-
+/* 
 .was-validated :valid ~ .valid-feedback,
 .was-validated :valid ~ .valid-tooltip,
 .is-valid ~ .valid-feedback,
@@ -2300,14 +2308,14 @@ textarea.form-control.is-valid {
 .custom-file-input.is-valid:focus ~ .custom-file-label {
   border-color: #1cc88a;
   box-shadow: 0 0 0 0.2rem rgba(28, 200, 138, 0.25);
-}
+} */
 
 .invalid-feedback {
   display: none;
   width: 100%;
-  margin-top: 0.25rem;
-  font-size: 80%;
-  color: #e74a3b;
+  margin-top: 8px;
+  font-size: 14px;
+  color: #db2e57;
 }
 
 .invalid-tooltip {
@@ -2340,17 +2348,23 @@ textarea.form-control.is-valid {
 
 .was-validated .form-control:invalid,
 .form-control.is-invalid {
-  border-color: #e74a3b;
+  border-color: #db2e57;
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23e74a3b' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23e74a3b' stroke='none'/%3e%3c/svg%3e");
+  background: rgba(244, 192, 205, 0.1);
+  background-image: url('/img/error-icon.svg');
   background-repeat: no-repeat;
   background-position: right calc(0.375em + 0.1875rem) center;
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 
+.was-validated .form-control:invalid::placeholder {
+  color: #db2e57;
+  font-weight: 400;
+}
+
 .was-validated .form-control:invalid:focus,
 .form-control.is-invalid:focus {
-  border-color: #e74a3b;
+  border-color: #db2e57;
   box-shadow: 0 0 0 0.2rem rgba(231, 74, 59, 0.25);
 }
 
@@ -2381,7 +2395,7 @@ textarea.form-control.is-invalid {
 
 .was-validated .form-check-input:invalid ~ .form-check-label,
 .form-check-input.is-invalid ~ .form-check-label {
-  color: #e74a3b;
+  color: #db2e57;
 }
 
 .was-validated .form-check-input:invalid ~ .invalid-feedback,
@@ -2495,6 +2509,7 @@ textarea.form-control.is-invalid {
 }
 
 .btn {
+  height: 54px;
   display: inline-block;
   font-weight: 400;
   color: #858796;
@@ -2506,12 +2521,16 @@ textarea.form-control.is-invalid {
   user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
+  padding: 16px;
   font-size: 1rem;
-  line-height: 1.5;
-  border-radius: 0.35rem;
+  line-height: 1;
+  border-radius: 8px;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn.btn-custom-120 {
+  width: 120px;
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -3208,6 +3227,20 @@ fieldset:disabled a.btn {
   margin-top: 0.5rem;
 }
 
+.btn.btn-collapse:focus {
+  box-shadow: none;
+}
+
+.btn.collapsed li {
+  transform: rotate(0deg);
+  transition: all 0.15s ease;
+}
+
+.btn:not(.collapsed) li {
+  transform: rotate(180deg);
+  transition: all 0.15s ease;
+}
+
 input[type='submit'].btn-block,
 input[type='reset'].btn-block,
 input[type='button'].btn-block {
@@ -3279,7 +3312,6 @@ input[type='button'].btn-block {
   display: none;
   float: left;
   min-width: 10rem;
-  padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 0.85rem;
   color: #858796;
@@ -3287,8 +3319,9 @@ input[type='button'].btn-block {
   list-style: none;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid #e3e6f0;
-  border-radius: 0.35rem;
+  border: 1px solid #e4e7ec;
+  box-shadow: 0px 4px 8px rgba(19, 31, 56, 0.1);
+  border-radius: 0.5rem;
 }
 
 .dropdown-menu-left {
@@ -3449,7 +3482,7 @@ input[type='button'].btn-block {
 .dropdown-item {
   display: block;
   width: 100%;
-  padding: 0.25rem 1.5rem;
+  padding: 16px 24px;
   clear: both;
   font-weight: 400;
   color: #3a3b45;
@@ -3457,20 +3490,27 @@ input[type='button'].btn-block {
   white-space: nowrap;
   background-color: transparent;
   border: 0;
+  font-size: 16px;
+  border-bottom: 1px solid #e4e7ec;
+}
+
+.dropdown-item:last-child {
+  border-bottom: 0px;
 }
 
 .dropdown-item:hover,
 .dropdown-item:focus {
   color: #2e2f37;
   text-decoration: none;
-  background-color: #eaecf4;
+  background-color: #f8f9fb;
+  border-radius: 0.5rem;
 }
 
 .dropdown-item.active,
 .dropdown-item:active {
-  color: #fff;
+  color: #2e2f37;
   text-decoration: none;
-  background-color: #4e73df;
+  background-color: #f8f9fb;
 }
 
 .dropdown-item.disabled,
@@ -3749,7 +3789,7 @@ input[type='button'].btn-block {
   white-space: nowrap;
   background-color: #eaecf4;
   border: 1px solid #d1d3e2;
-  border-radius: 0.35rem;
+  border-radius: 8px;
 }
 
 .input-group-text input[type='radio'],
@@ -3898,6 +3938,7 @@ input[type='button'].btn-block {
   content: '';
   background-color: #fff;
   border: #b7b9cc solid 1px;
+  top: 2px;
 }
 
 .custom-control-label::after {
@@ -3916,7 +3957,7 @@ input[type='button'].btn-block {
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
-  top: 0;
+  top: 2px;
 }
 
 .custom-checkbox
@@ -6161,7 +6202,7 @@ a.close.disabled {
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 0.3rem;
+  border-radius: 0.5em;
   outline: 0;
 }
 
@@ -11392,7 +11433,7 @@ form.user .form-control-user {
 form.user .btn-user {
   font-size: 16px;
   border-radius: 8px;
-  height: 50px;
+  height: 54px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -11823,7 +11864,7 @@ body.sidebar-toggled footer.sticky-footer {
 .inner-circle {
   position: absolute;
   width: 100%;
-  top: 43%;
+  top: 40%;
   text-align: center;
 }
 
@@ -11951,6 +11992,11 @@ select + i.fa {
 select option {
   padding-right: 21px;
 }
+
+/* input,
+input[type='text'].form-control {
+  height: 54px;
+} */
 
 /* Neutral Color */
 .bg-neutral-800 {
@@ -12089,4 +12135,75 @@ select option {
 }
 .bg-success-100 {
   background-color: #17d06a;
+}
+
+/* Toast  */
+/* #toast{
+  
+} */
+.toast-custom {
+  visibility: hidden;
+  max-width: 540px;
+  position: fixed;
+  z-index: 1;
+  right: 24px;
+  top: 100px;
+}
+.toast-custom.show {
+  visibility: visible;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@keyframes fadein {
+  from {
+    top: 0;
+    opacity: 0;
+  }
+  to {
+    top: 100px;
+    opacity: 1;
+  }
+}
+
+@keyframes fadeout {
+  from {
+    top: 100px;
+    opacity: 1;
+  }
+  to {
+    top: 0;
+    opacity: 0;
+  }
+}
+
+.toast-wrapper-success {
+  padding: 32px 24px;
+  border-left: 16px solid #17d06a;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(19, 31, 56, 0.1);
+  background: #ffffff;
+}
+
+.toast-wrapper-failed {
+  padding: 32px 24px;
+  border-left: 16px solid #db2e57;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(19, 31, 56, 0.1);
+  background: #ffffff;
+}
+
+.input-search input {
+  padding-right: calc(1.5em + 0.75rem);
+  background-image: url('/img/search-icon.svg');
+  background-repeat: no-repeat;
+  background-position: right calc(0.75em + 0.1875rem) center;
+  background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
+
+.input-date input {
+  padding-right: calc(1.5em + 0.75rem);
+  background-image: url('/img/calendar-icon.svg');
+  background-repeat: no-repeat;
+  background-position: right calc(0.75em + 0.1875rem) center;
+  background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
